# app/pb/user/user.pb.validate.go
@@ -57,39 +57,11 @@ func (m *RegisterReq) validate(all bool) error {
 
 	var errors []error
 
-	if utf8.RuneCountInString(m.GetUsername()) < 1 {
-		err := RegisterReqValidationError{
-			field:  "Username",
-			reason: "value length must be at least 1 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
+	// no validation rules for Password
 
-	if err := m._validateEmail(m.GetEmail()); err != nil {
-		err = RegisterReqValidationError{
-			field:  "Email",
-			reason: "value must be a valid email address",
-			cause:  err,
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
+	// no validation rules for Username
 
-	if utf8.RuneCountInString(m.GetPassword()) < 1 {
-		err := RegisterReqValidationError{
-			field:  "Password",
-			reason: "value length must be at least 1 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
+	// no validation rules for Email
 
 	// no validation rules for ConfirmPassword
 
@@ -100,56 +72,6 @@ func (m *RegisterReq) validate(all bool) error {
 	}
 
 	return nil
-}
-
-func (m *RegisterReq) _validateHostname(host string) error {
-	s := strings.ToLower(strings.TrimSuffix(host, "."))
-
-	if len(host) > 253 {
-		return errors.New("hostname cannot exceed 253 characters")
-	}
-
-	for _, part := range strings.Split(s, ".") {
-		if l := len(part); l == 0 || l > 63 {
-			return errors.New("hostname part must be non-empty and cannot exceed 63 characters")
-		}
-
-		if part[0] == '-' {
-			return errors.New("hostname parts cannot begin with hyphens")
-		}
-
-		if part[len(part)-1] == '-' {
-			return errors.New("hostname parts cannot end with hyphens")
-		}
-
-		for _, r := range part {
-			if (r < 'a' || r > 'z') && (r < '0' || r > '9') && r != '-' {
-				return fmt.Errorf("hostname parts can only contain alphanumeric characters or hyphens, got %q", string(r))
-			}
-		}
-	}
-
-	return nil
-}
-
-func (m *RegisterReq) _validateEmail(addr string) error {
-	a, err := mail.ParseAddress(addr)
-	if err != nil {
-		return err
-	}
-	addr = a.Address
-
-	if len(addr) > 254 {
-		return errors.New("email addresses cannot exceed 254 characters")
-	}
-
-	parts := strings.SplitN(addr, "@", 2)
-
-	if len(parts[0]) > 64 {
-		return errors.New("email address local phrase cannot exceed 64 characters")
-	}
-
-	return m._validateHostname(parts[1])
 }
 
 // RegisterReqMultiError is an error wrapping multiple validation errors
@@ -246,16 +168,7 @@ func (m *LoginReq) validate(all bool) error {
 
 	// no validation rules for Type
 
-	if utf8.RuneCountInString(m.GetAccount()) < 1 {
-		err := LoginReqValidationError{
-			field:  "Account",
-			reason: "value length must be at least 1 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
+	// no validation rules for Account
 
 	// no validation rules for Password
 
